git-svn-id: svn://edison.comlab.ox.ac.uk/krr/2008/HermiT/trunk@418 6b6e81c3-f1c2-4030-a0a9-a0569132be5c