@@ -40,52 +40,46 @@ public final class ExtensionManager implements Serializable {
         m_tableauMonitor=m_tableau.m_tableauMonitor;
         m_dependencySetFactory=m_tableau.m_dependencySetFactory;
         m_extensionTablesByArity=new HashMap<Integer,ExtensionTable>();
-        m_binaryExtensionTable = new ExtensionTableWithTupleIndexes(
-                m_tableau, this, 2, !m_tableau.isDeterministic(),
+        m_binaryExtensionTable=
+            new ExtensionTableWithTupleIndexes(m_tableau,this,2,!m_tableau.isDeterministic(),
                 new TupleIndex[] {
-            new TupleIndex(new int[] { 1,0 }),
-            new TupleIndex(new int[] { 0,1 })
-        }) {
-            private static final long serialVersionUID=1462821385000191875L;
-
-            public boolean isTupleActive(Object[] tuple) {
-                return ((Node)tuple[1]).isActive();
-            }
-            public boolean isTupleActive(int tupleIndex) {
-                return ((Node)m_tupleTable.getTupleObject(tupleIndex,1)).isActive();
-            }
-        };
+                    new TupleIndex(new int[] { 1,0 }),
+                    new TupleIndex(new int[] { 0,1 })
+                }
+            ) {
+                private static final long serialVersionUID=1462821385000191875L;
+    
+                public boolean isTupleActive(Object[] tuple) {
+                    return ((Node)tuple[1]).isActive();
+                }
+                public boolean isTupleActive(int tupleIndex) {
+                    return ((Node)m_tupleTable.getTupleObject(tupleIndex,1)).isActive();
+                }
+            };
         m_extensionTablesByArity.put(new Integer(2),m_binaryExtensionTable);
-        m_ternaryExtensionTable = new ExtensionTableWithTupleIndexes(
-                m_tableau, this,3,!m_tableau.isDeterministic(),
+        m_ternaryExtensionTable=
+            new ExtensionTableWithTupleIndexes(m_tableau,this,3,!m_tableau.isDeterministic(),
                 new TupleIndex[] {
-            new TupleIndex(new int[] { 0,1,2 }),
-            new TupleIndex(new int[] { 1,2,0 }),
-            new TupleIndex(new int[] { 2,0,1 })
-        }) {
-            private static final long serialVersionUID=-731201626401421877L;
-
-            public boolean isTupleActive(Object[] tuple) {
-                return ((Node)tuple[1]).isActive() && ((Node)tuple[2]).isActive();
-            }
-            public boolean isTupleActive(int tupleIndex) {
-                return ((Node)m_tupleTable.getTupleObject(tupleIndex,1)).isActive() 
-                    && ((Node)m_tupleTable.getTupleObject(tupleIndex,2)).isActive();
-            }
-        };
+                    new TupleIndex(new int[] { 0,1,2 }),
+                    new TupleIndex(new int[] { 1,2,0 }),
+                    new TupleIndex(new int[] { 2,0,1 })
+                }
+            ) {
+                private static final long serialVersionUID=-731201626401421877L;
+    
+                public boolean isTupleActive(Object[] tuple) {
+                    return ((Node)tuple[1]).isActive() && ((Node)tuple[2]).isActive();
+                }
+                public boolean isTupleActive(int tupleIndex) {
+                    return ((Node)m_tupleTable.getTupleObject(tupleIndex,1)).isActive() 
+                        && ((Node)m_tupleTable.getTupleObject(tupleIndex,2)).isActive();
+                }
+            };
         m_extensionTablesByArity.put(new Integer(3),m_ternaryExtensionTable);
         for (DescriptionGraph descriptionGraph : m_tableau.getDLOntology().getAllDescriptionGraphs()) {
-            Integer arityInteger=new Integer(descriptionGraph.getNumberOfVertices()+1);
-            if (!m_extensionTablesByArity.containsKey(arityInteger)) {
-                m_extensionTablesByArity.put(
-                        arityInteger, 
-                        new ExtensionTableWithFullIndex(
-                                m_tableau, this, 
-                                descriptionGraph.getNumberOfVertices()+1,
-                                !m_tableau.isDeterministic()
-                         )
-                );
-            }
+            Integer arityInteger=Integer.valueOf(descriptionGraph.getNumberOfVertices()+1);
+            if (!m_extensionTablesByArity.containsKey(arityInteger))
+                m_extensionTablesByArity.put(arityInteger,new ExtensionTableWithFullIndex(m_tableau,this,descriptionGraph.getNumberOfVertices()+1,!m_tableau.isDeterministic()));
         }
         m_allExtensionTablesArray=new ExtensionTable[m_extensionTablesByArity.size()];
         m_extensionTablesByArity.values().toArray(m_allExtensionTablesArray);
